@@ -19,7 +19,8 @@ base-installer (1.14) UNRELEASED; urgency=low
       Use the sarge branch.
     - Use chrp 2.4 kernel on all powerpc chrp* subarchitectures, even
       chrp-rs6k. The chrp-rs6k 2.4 kernel is to be removed.
-    - Fix arch_get_kernel output on s390.
+    - Fix arch_get_kernel output on s390, and explicitly disallow -s390-tape
+      and -s390x (documenting why).
 
  -- Frans Pop <aragorn@tiscali.nl>  Wed,  1 Dec 2004 14:53:07 +0100
 
